package fuzz;
syntax = "proto3";

message Ready {}

message RequestCoverage {}

message WorkSummary {
  uint32 result = 1;
  string hash = 2;
  uint32 runtime = 3;
  string error = 4;
}

message WorkCoverage {
  bytes coverage = 1;
}

message DoWork {
  bytes input = 1;
}

message FoundLiterals {
  repeated string literals = 1;
}
